--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "recoil": "^0.7.4"
+    "recoil": "^0.7.4",
+    "recoil-persist": "^4.2.0"
   }
 }
