--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.0",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
