--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.0",
     "next": "latest",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "recoil": "^0.7.4",
     "recoil-persist": "^4.2.0"
   }
