--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^5.10.13",
     "d3": "^7.6.1",
     "next": "latest",
+    "next-seo": "^5.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.6",
